[gd_scene load_steps=6 format=3 uid="uid://crkks824m0c7q"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_cotes"]
[ext_resource type="PackedScene" uid="uid://54i3us6exnpq" path="res://scenes/background.tscn" id="2_thyvu"]
[ext_resource type="PackedScene" uid="uid://sdo2wkv6qhfu" path="res://scenes/start_button.tscn" id="2_yuhnq"]
[ext_resource type="PackedScene" uid="uid://bks5sipqpfvnw" path="res://scenes/menu_music.tscn" id="4_x7hjy"]
[ext_resource type="PackedScene" uid="uid://c26uvbgmjybv3" path="res://scenes/press_space.tscn" id="5_kpsjl"]

[node name="main" type="Node"]
script = ExtResource("1_cotes")

[node name="menu_background" parent="." instance=ExtResource("2_thyvu")]
position = Vector2(480, 270)
scale = Vector2(60, 33.75)

[node name="start_button" parent="." instance=ExtResource("2_yuhnq")]

[node name="menu_music" parent="." instance=ExtResource("4_x7hjy")]
volume_db = -7.3

[node name="press_space" parent="." instance=ExtResource("5_kpsjl")]
position = Vector2(480, 280)

[connection signal="pressed" from="start_button" to="." method="_on_start_button_pressed"]
